syntax = "proto3";
package sraft;

service Node {
    rpc AppendEntries (AppendEntriesRequest) returns (AppendEntriesResponce);
    rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponce);
}

message AppendEntriesRequest {
    uint64 term = 1;
    uint32 leaderID = 2;
    uint64 prevLogIndex = 3;
    uint64 prevLogTerm = 4;
    repeated LogEntry entries = 5;
    uint64 leaderCommit = 6;
}

message AppendEntriesResponce {
    uint64 term = 1;
    bool success = 2;
}

message RequestVoteRequest {
    uint64 term = 1;
    uint32 candidateID = 2;
    uint64 lastLogIndex = 3;
    uint64 lastLogTerm = 4;
}

message RequestVoteResponce {
    uint64 term = 1;
    bool voteGranted = 2;
}

message LogEntry {
    string value = 1;
    bytes key = 2;
}